--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -1,1 +1,7 @@
+/* ==========================================================================
+   Utilities / Vendors
+   ========================================================================== */
+
 @import "../vendors/bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "../vendors/bower_components/font-awesome/scss/font-awesome.scss";
+@import "../vendors/bower_components/breakpoint-sass/stylesheets/breakpoint.scss";
