--- a/src/scss/modules/breadcrumbs/_breadcrumbs-list.scss
+++ b/src/scss/modules/breadcrumbs/_breadcrumbs-list.scss
@@ -1,9 +1,11 @@
 /* ==========================================================================
-   Modules
+   Breadcrumbs Style
    ========================================================================== */
 
-@import
-'modules/navigation/nav',
-'modules/header/header',
-'modules/breadcrumbs/breadcrumbs-list',
-'modules/overview/overview';
+.breadcrumbs-list {
+	display: flex;
+
+	> li {
+		padding-right: 20px;
+	}
+}
