--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -23,8 +23,13 @@
 
 /* Featured
    ========================================================================== */
+
 .l-featured {
 	margin: 70px 0px;
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+
 }
 
 /* Footer
