--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -6,4 +6,6 @@
 'modules/navigation/nav',
 'modules/header/header',
 'modules/breadcrumbs/breadcrumbs-list',
-'modules/overview/overview';
+'modules/overview/overview',
+'modules/featured/featured-list',
+'modules/categories/categories';
