--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -38,6 +38,9 @@ $lg: 1024px;
 $xl: 1200px;
 $sl: 1600px;
 
+$md-lg-breakpoint: 991px;
+
 $phone-down: 0px 320px;
 $phone-up: 320px 768px;
 $tablet-down: 320px 991px;
+$desktop-down: 320px 1200px;
