add neighborhood html file and scss modules

--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -8,4 +8,5 @@
 'modules/breadcrumbs/breadcrumbs-list',
 'modules/overview/overview',
 'modules/featured/featured-list',
-'modules/categories/categories';
+'modules/categories/categories',
+'modules/divider/divider';
