--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -15,7 +15,8 @@
    ========================================================================== */
 
 .l-overview {
-	margin: 20px 0px;
+	margin-top: 20px;
+   padding-bottom: 70px;
 	display: flex;
 	flex-wrap: wrap;
 }
@@ -26,6 +27,7 @@
 
 .l-featured {
 	margin: 70px 0px;
+   padding-bottom: 70px;
    display: flex;
    justify-content: center;
    flex-direction: column;
