--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -44,3 +44,5 @@ $phone-down: 0px 320px;
 $phone-up: 320px 768px;
 $tablet-down: 320px 991px;
 $desktop-down: 320px 1200px;
+
+$tablet-down-special: 768px 991px;
