add complete ranking individual page

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -40,6 +40,27 @@
 
 }
 
+/* Architect
+   ========================================================================== */
+
+ .l-architect {
+   margin-top: 40px;
+ }
+
+ /* Portfolio
+    ========================================================================== */
+
+.l-portfolio {
+   margin-top: 70px;
+}
+
+/* Project Map
+   ========================================================================== */
+
+.l-project-maps {
+   margin-top: 100px;
+}
+
 /* Footer
    ========================================================================== */
 
