--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -9,4 +9,7 @@
 'modules/overview/overview',
 'modules/featured/featured-list',
 'modules/categories/categories',
-'modules/divider/divider';
+'modules/divider/divider',
+'modules/architect/architect',
+'modules/portfolio/portfolio',
+'modules/map/map';
